--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,4 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i);
 @import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i);
 
 
@@ -21,7 +20,7 @@ body {
   line-height: 1.6;
 }
 .display-1 {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-size: 4rem;
 }
 .display-1 > .mbr-iconfont {
@@ -133,7 +132,7 @@ body {
   background-color: #c1c1c1 !important;
 }
 .bg-success {
-  background-color: #f7ed4a !important;
+  background-color: #efefef !important;
 }
 .bg-info {
   background-color: #82786e !important;
@@ -166,8 +165,8 @@ body {
 }
 .btn-secondary,
 .btn-secondary:active {
-  background-color: #ff3366 !important;
-  border-color: #ff3366 !important;
+  background-color: #a833d0 !important;
+  border-color: #a833d0 !important;
   color: #ffffff !important;
 }
 .btn-secondary:hover,
@@ -175,14 +174,14 @@ body {
 .btn-secondary.focus,
 .btn-secondary.active {
   color: #ffffff !important;
-  background-color: #e50039 !important;
-  border-color: #e50039 !important;
+  background-color: #772294 !important;
+  border-color: #772294 !important;
 }
 .btn-secondary.disabled,
 .btn-secondary:disabled {
   color: #ffffff !important;
-  background-color: #e50039 !important;
-  border-color: #e50039 !important;
+  background-color: #772294 !important;
+  border-color: #772294 !important;
 }
 .btn-info,
 .btn-info:active {
@@ -206,23 +205,23 @@ body {
 }
 .btn-success,
 .btn-success:active {
-  background-color: #f7ed4a !important;
-  border-color: #f7ed4a !important;
-  color: #3f3c03 !important;
+  background-color: #efefef !important;
+  border-color: #efefef !important;
+  color: #707070 !important;
 }
 .btn-success:hover,
 .btn-success:focus,
 .btn-success.focus,
 .btn-success.active {
-  color: #3f3c03 !important;
-  background-color: #eadd0a !important;
-  border-color: #eadd0a !important;
+  color: #707070 !important;
+  background-color: #c9c9c9 !important;
+  border-color: #c9c9c9 !important;
 }
 .btn-success.disabled,
 .btn-success:disabled {
-  color: #3f3c03 !important;
-  background-color: #eadd0a !important;
-  border-color: #eadd0a !important;
+  color: #707070 !important;
+  background-color: #c9c9c9 !important;
+  border-color: #c9c9c9 !important;
 }
 .btn-warning,
 .btn-warning:active {
@@ -330,22 +329,22 @@ body {
 .btn-secondary-outline,
 .btn-secondary-outline:active {
   background: none;
-  border-color: #cc0033;
-  color: #cc0033;
+  border-color: #671d80;
+  color: #671d80;
 }
 .btn-secondary-outline:hover,
 .btn-secondary-outline:focus,
 .btn-secondary-outline.focus,
 .btn-secondary-outline.active {
   color: #ffffff;
-  background-color: #ff3366;
-  border-color: #ff3366;
+  background-color: #a833d0;
+  border-color: #a833d0;
 }
 .btn-secondary-outline.disabled,
 .btn-secondary-outline:disabled {
   color: #ffffff !important;
-  background-color: #ff3366 !important;
-  border-color: #ff3366 !important;
+  background-color: #a833d0 !important;
+  border-color: #a833d0 !important;
 }
 .btn-info-outline,
 .btn-info-outline:active {
@@ -370,22 +369,22 @@ body {
 .btn-success-outline,
 .btn-success-outline:active {
   background: none;
-  border-color: #d2c609;
-  color: #d2c609;
+  border-color: #bcbcbc;
+  color: #bcbcbc;
 }
 .btn-success-outline:hover,
 .btn-success-outline:focus,
 .btn-success-outline.focus,
 .btn-success-outline.active {
-  color: #3f3c03;
-  background-color: #f7ed4a;
-  border-color: #f7ed4a;
+  color: #707070;
+  background-color: #efefef;
+  border-color: #efefef;
 }
 .btn-success-outline.disabled,
 .btn-success-outline:disabled {
-  color: #3f3c03 !important;
-  background-color: #f7ed4a !important;
-  border-color: #f7ed4a !important;
+  color: #707070 !important;
+  background-color: #efefef !important;
+  border-color: #efefef !important;
 }
 .btn-warning-outline,
 .btn-warning-outline:active {
@@ -465,10 +464,10 @@ body {
   color: #c1c1c1 !important;
 }
 .text-secondary {
-  color: #ff3366 !important;
+  color: #a833d0 !important;
 }
 .text-success {
-  color: #f7ed4a !important;
+  color: #efefef !important;
 }
 .text-info {
   color: #82786e !important;
@@ -491,11 +490,11 @@ a.text-primary:focus {
 }
 a.text-secondary:hover,
 a.text-secondary:focus {
-  color: #cc0033 !important;
+  color: #671d80 !important;
 }
 a.text-success:hover,
 a.text-success:focus {
-  color: #d2c609 !important;
+  color: #bcbcbc !important;
 }
 a.text-info:hover,
 a.text-info:focus {
@@ -1373,19 +1372,13 @@ body {
 .dropup .dropdown-toggle::after {
   display: none;
 }
-.cid-qOPJnQb6sw {
-  padding-top: 60px;
+.cid-qOYc1Jx1sX {
+  padding-top: 120px;
   padding-bottom: 0px;
-  background-color: #1c041d;
+  background-image: url("../../../assets/images/aurora-prints8-2-2000x1554.jpg");
 }
-.cid-qOPJnQb6sw .mbr-section-subtitle {
-  color: #a833d0;
-}
-.cid-qOPJnQb6sw H2 {
-  color: #ff00c2;
-}
-.cid-qOPJnQb6sw .mbr-section-subtitle DIV {
-  color: #efefef;
+.cid-qOYc1Jx1sX H2 {
+  color: #cccccc;
 }
 .cid-qOPyuWFTBB {
   padding-top: 30px;
@@ -1418,12 +1411,12 @@ body {
 }
 .cid-qOPLnhyYvP .navbar {
   padding: .5rem 0;
-  background: #000000;
+  background: #1c041d;
   transition: none;
   min-height: 77px;
 }
 .cid-qOPLnhyYvP .navbar-dropdown.bg-color.transparent.opened {
-  background: #000000;
+  background: #1c041d;
 }
 .cid-qOPLnhyYvP a {
   font-style: normal;
@@ -1507,7 +1500,7 @@ body {
   padding-bottom: 0;
 }
 .cid-qOPLnhyYvP .dropdown .dropdown-menu {
-  background: #000000;
+  background: #1c041d;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -1921,29 +1914,39 @@ body {
     width: 100% !important;
   }
 }
-.cid-qOQg7T9sao {
+.cid-qOYgBWeZTg {
+  padding-top: 30px;
+  padding-bottom: 45px;
+  background-image: url("../../../assets/images/22-1800x1800.png");
+}
+.cid-qOVWoyqYru {
   padding-top: 90px;
   padding-bottom: 90px;
-  background: #1c041d;
+  background-image: url("../../../assets/images/6.gif");
 }
-.cid-qOQg7T9sao .image-block {
-  margin: auto;
+.cid-qOVWoyqYru h1 {
+  color: #616161;
 }
-.cid-qOQg7T9sao .mbr-figure {
-  margin: 0 auto;
+.cid-qOVWoyqYru h2,
+.cid-qOVWoyqYru h3,
+.cid-qOVWoyqYru p {
+  color: #767676;
 }
-.cid-qOQg7T9sao figcaption {
-  position: relative;
+.cid-qOVWoyqYru .mbr-section-subtitle {
+  font-style: italic;
 }
-.cid-qOQg7T9sao figcaption div {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
+.cid-qOVWoyqYru P {
+  color: #ffffff;
+  text-align: left;
 }
-@media (max-width: 768px) {
-  .cid-qOQg7T9sao .image-block {
-    width: 100% !important;
-  }
+.cid-qOVWoyqYru I {
+  color: #a833d0;
+}
+.cid-qOVWoyqYru H1 {
+  text-align: left;
+}
+.cid-qOVWoyqYru B {
+  color: #ffffff;
 }
 .cid-qOQggsGL6h {
   background: #1c041d;
