--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -585,8 +585,8 @@ a:hover {
   color: #ffffff;
 }
 /* Scroll to top button*/
-.scrollToTop_wraper {
-  display: none;
+#scrollToTop a {
+  border-radius: 100px;
 }
 #scrollToTop a i:before {
   content: '';
@@ -2729,7 +2729,7 @@ body {
   }
 }
 .cid-qPcR1d2JPj DIV {
-  color: #a833d0;
+  color: #1c041d;
   text-align: center;
 }
 .cid-qPcR1d2JPj B {
@@ -3017,4 +3017,559 @@ body {
   .cid-qPcWO5pbSr .image-block {
     width: 100% !important;
   }
+}
+.cid-qPdt4vjxSc {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-image: url("../../../assets/images/116.gif");
+}
+.cid-qPdt4vjxSc .socicon-bg-facebook {
+  background: #3e5b98;
+  color: #ffffff;
+}
+.cid-qPdt4vjxSc .socicon-bg-twitter {
+  background: #4da7de;
+  color: #ffffff;
+}
+.cid-qPdt4vjxSc .socicon-bg-googleplus {
+  background: #dd4b39;
+  color: #ffffff;
+}
+.cid-qPdt4vjxSc .socicon-bg-vkontakte {
+  background: #5a7fa6;
+  color: #ffffff;
+}
+.cid-qPdt4vjxSc .socicon-bg-odnoklassniki {
+  background: #f48420;
+  color: #ffffff;
+}
+.cid-qPdt4vjxSc .socicon-bg-pinterest {
+  background: #c92619;
+  color: #ffffff;
+}
+.cid-qPdt4vjxSc .socicon-bg-mail {
+  background: #134785;
+  color: #ffffff;
+}
+.cid-qPdt4vjxSc .btn-social {
+  border: none !important;
+}
+.cid-qPdt4vjxSc .btn-social {
+  border-radius: 0 !important;
+}
+.cid-qPdt4vjxSc [class^="socicon-"]:before,
+.cid-qPdt4vjxSc [class*=" socicon-"]:before {
+  line-height: 44px;
+}
+@media (max-width: 767px) {
+  .cid-qPdt4vjxSc .btn {
+    font-size: 20px !important;
+  }
+}
+.cid-qPdt4vjxSc .mbr-section-title I {
+  color: #a833d0;
+}
+.cid-qPdt4vjxSc .mbr-section-title B {
+  color: #efefef;
+}
+.cid-qPduRFuM04 .navbar {
+  padding: .5rem 0;
+  background: #1c041d;
+  transition: none;
+  min-height: 77px;
+}
+.cid-qPduRFuM04 .navbar-dropdown.bg-color.transparent.opened {
+  background: #1c041d;
+}
+.cid-qPduRFuM04 a {
+  font-style: normal;
+}
+.cid-qPduRFuM04 .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-qPduRFuM04 .nav-item a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+}
+.cid-qPduRFuM04 .nav-item:focus,
+.cid-qPduRFuM04 .nav-link:focus {
+  outline: none;
+}
+.cid-qPduRFuM04 .btn {
+  padding: 0.4rem 1.5rem;
+  display: inline-flex;
+  align-items: center;
+}
+.cid-qPduRFuM04 .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-qPduRFuM04 .menu-logo {
+  margin-right: auto;
+}
+.cid-qPduRFuM04 .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  align-items: center;
+}
+.cid-qPduRFuM04 .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: -webkit-flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-qPduRFuM04 .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-qPduRFuM04 .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-qPduRFuM04 .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-qPduRFuM04 .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-qPduRFuM04 .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-qPduRFuM04 .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-qPduRFuM04 .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-qPduRFuM04 .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-qPduRFuM04 .dropdown .dropdown-menu {
+  background: #1c041d;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-qPduRFuM04 .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-qPduRFuM04 .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-qPduRFuM04 .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-qPduRFuM04 .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-qPduRFuM04 .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-qPduRFuM04 .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-qPduRFuM04 .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-qPduRFuM04 .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-qPduRFuM04 .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-qPduRFuM04 .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-qPduRFuM04 .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-qPduRFuM04 button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-qPduRFuM04 button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-qPduRFuM04 button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #a833d0;
+}
+.cid-qPduRFuM04 button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-qPduRFuM04 button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qPduRFuM04 button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qPduRFuM04 button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-qPduRFuM04 nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qPduRFuM04 nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-qPduRFuM04 nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-qPduRFuM04 nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qPduRFuM04 .collapsed.navbar-expand {
+  flex-direction: column;
+}
+.cid-qPduRFuM04 .collapsed .btn {
+  display: flex;
+}
+.cid-qPduRFuM04 .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-qPduRFuM04 .collapsed .navbar-collapse.collapsing,
+.cid-qPduRFuM04 .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-qPduRFuM04 .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-qPduRFuM04 .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-qPduRFuM04 .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-qPduRFuM04 .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-qPduRFuM04 .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-qPduRFuM04 .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
+.cid-qPduRFuM04 .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-qPduRFuM04 .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-qPduRFuM04 .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-qPduRFuM04 .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-qPduRFuM04 .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-qPduRFuM04 .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-qPduRFuM04 .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-qPduRFuM04 .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-qPduRFuM04 .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-qPduRFuM04 .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-qPduRFuM04 .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-qPduRFuM04 .navbar-expand {
+    flex-direction: column;
+  }
+  .cid-qPduRFuM04 img {
+    height: 3.8rem !important;
+  }
+  .cid-qPduRFuM04 .btn {
+    display: flex;
+  }
+  .cid-qPduRFuM04 button.navbar-toggler {
+    display: block;
+  }
+  .cid-qPduRFuM04 .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-qPduRFuM04 .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-qPduRFuM04 .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-qPduRFuM04 .navbar-collapse.collapsing,
+  .cid-qPduRFuM04 .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-qPduRFuM04 .navbar-collapse.collapsing .navbar-nav,
+  .cid-qPduRFuM04 .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-qPduRFuM04 .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-qPduRFuM04 .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-qPduRFuM04 .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-qPduRFuM04 .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-qPduRFuM04 .navbar-collapse.collapsing .navbar-buttons,
+  .cid-qPduRFuM04 .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-qPduRFuM04 .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-qPduRFuM04 .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-qPduRFuM04 .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-qPduRFuM04 .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-qPduRFuM04 .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-qPduRFuM04 .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-qPduRFuM04 .menu-logo {
+    flex-shrink: 0;
+  }
+}
+.cid-qPduRFuM04 .navbar-collapse {
+  flex-basis: auto;
+}
+.cid-qPduRFuM04 .nav-link:hover,
+.cid-qPduRFuM04 .dropdown-item:hover {
+  color: #c1c1c1 !important;
+}
+.cid-qPdlnfxtMX {
+  padding-top: 120px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/1116.gif");
+}
+.cid-qPdlnfxtMX h1 {
+  color: #616161;
+}
+.cid-qPdlnfxtMX h2,
+.cid-qPdlnfxtMX h3,
+.cid-qPdlnfxtMX p {
+  color: #767676;
+}
+.cid-qPdlnfxtMX .mbr-section-subtitle {
+  font-style: italic;
+}
+.cid-qPdlnfxtMX P {
+  color: #ffffff;
+  text-align: left;
+}
+.cid-qPdlnfxtMX I {
+  color: #a833d0;
+}
+.cid-qPdlnfxtMX H1 {
+  text-align: left;
+}
+.cid-qPdlnfxtMX B {
+  color: #ffffff;
+}
+.cid-qPdk4Wb9iT {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background: #1c041d;
+  background: linear-gradient(45deg, #1c041d, #a833d0);
+}
+.cid-qPdk4Wb9iT .image-block {
+  margin: auto;
+}
+.cid-qPdk4Wb9iT figcaption {
+  position: relative;
+}
+.cid-qPdk4Wb9iT figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qPdk4Wb9iT .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qPdk4Wb9iT DIV {
+  color: #1c041d;
+  text-align: center;
+}
+.cid-qPdk4Wb9iT B {
+  color: #a833d0;
+}
+.cid-qPdrIUqak8 {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-image: url("../../../assets/images/116.gif");
+}
+.cid-qPdrIUqak8 .socicon-bg-facebook {
+  background: #3e5b98;
+  color: #ffffff;
+}
+.cid-qPdrIUqak8 .socicon-bg-twitter {
+  background: #4da7de;
+  color: #ffffff;
+}
+.cid-qPdrIUqak8 .socicon-bg-googleplus {
+  background: #dd4b39;
+  color: #ffffff;
+}
+.cid-qPdrIUqak8 .socicon-bg-vkontakte {
+  background: #5a7fa6;
+  color: #ffffff;
+}
+.cid-qPdrIUqak8 .socicon-bg-odnoklassniki {
+  background: #f48420;
+  color: #ffffff;
+}
+.cid-qPdrIUqak8 .socicon-bg-pinterest {
+  background: #c92619;
+  color: #ffffff;
+}
+.cid-qPdrIUqak8 .socicon-bg-mail {
+  background: #134785;
+  color: #ffffff;
+}
+.cid-qPdrIUqak8 .btn-social {
+  border: none !important;
+}
+.cid-qPdrIUqak8 .btn-social {
+  border-radius: 0 !important;
+}
+.cid-qPdrIUqak8 [class^="socicon-"]:before,
+.cid-qPdrIUqak8 [class*=" socicon-"]:before {
+  line-height: 44px;
+}
+@media (max-width: 767px) {
+  .cid-qPdrIUqak8 .btn {
+    font-size: 20px !important;
+  }
+}
+.cid-qPdrIUqak8 .mbr-section-title I {
+  color: #a833d0;
+}
+.cid-qPdrIUqak8 .mbr-section-title B {
+  color: #efefef;
 }
