create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2207,52 +2207,6 @@ body {
     width: 100% !important;
   }
 }
-.cid-qPcHfbYNIF {
-  background: #1c041d;
-}
-.cid-qPcHfbYNIF .image-block {
-  margin: auto;
-  width: 100% !important;
-}
-.cid-qPcHfbYNIF .mbr-figure {
-  margin: 0 auto;
-}
-.cid-qPcHfbYNIF figcaption {
-  position: relative;
-}
-.cid-qPcHfbYNIF figcaption div {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-@media (max-width: 768px) {
-  .cid-qPcHfbYNIF .image-block {
-    width: 100% !important;
-  }
-}
-.cid-qPcHi8S5JM {
-  background: #1c041d;
-}
-.cid-qPcHi8S5JM .image-block {
-  margin: auto;
-  width: 100% !important;
-}
-.cid-qPcHi8S5JM .mbr-figure {
-  margin: 0 auto;
-}
-.cid-qPcHi8S5JM figcaption {
-  position: relative;
-}
-.cid-qPcHi8S5JM figcaption div {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-@media (max-width: 768px) {
-  .cid-qPcHi8S5JM .image-block {
-    width: 100% !important;
-  }
-}
 .cid-qP7pwB9tj5 {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -2277,26 +2231,26 @@ body {
     width: 100% !important;
   }
 }
-.cid-qPcHks7jgt {
+.cid-qPcHfbYNIF {
   background: #1c041d;
 }
-.cid-qPcHks7jgt .image-block {
+.cid-qPcHfbYNIF .image-block {
   margin: auto;
   width: 100% !important;
 }
-.cid-qPcHks7jgt .mbr-figure {
+.cid-qPcHfbYNIF .mbr-figure {
   margin: 0 auto;
 }
-.cid-qPcHks7jgt figcaption {
+.cid-qPcHfbYNIF figcaption {
   position: relative;
 }
-.cid-qPcHks7jgt figcaption div {
+.cid-qPcHfbYNIF figcaption div {
   position: absolute;
   bottom: 0;
   width: 100%;
 }
 @media (max-width: 768px) {
-  .cid-qPcHks7jgt .image-block {
+  .cid-qPcHfbYNIF .image-block {
     width: 100% !important;
   }
 }
@@ -2320,29 +2274,6 @@ body {
 }
 @media (max-width: 768px) {
   .cid-qPcHlTajMZ .image-block {
-    width: 100% !important;
-  }
-}
-.cid-qPcHlpOL10 {
-  background: #1c041d;
-}
-.cid-qPcHlpOL10 .image-block {
-  margin: auto;
-  width: 100% !important;
-}
-.cid-qPcHlpOL10 .mbr-figure {
-  margin: 0 auto;
-}
-.cid-qPcHlpOL10 figcaption {
-  position: relative;
-}
-.cid-qPcHlpOL10 figcaption div {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-@media (max-width: 768px) {
-  .cid-qPcHlpOL10 .image-block {
     width: 100% !important;
   }
 }
@@ -2534,29 +2465,6 @@ body {
 }
 @media (max-width: 768px) {
   .cid-qPcHx5iBlt .image-block {
-    width: 100% !important;
-  }
-}
-.cid-qPcHydLrS1 {
-  background: #1c041d;
-}
-.cid-qPcHydLrS1 .image-block {
-  margin: auto;
-  width: 100% !important;
-}
-.cid-qPcHydLrS1 .mbr-figure {
-  margin: 0 auto;
-}
-.cid-qPcHydLrS1 figcaption {
-  position: relative;
-}
-.cid-qPcHydLrS1 figcaption div {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-@media (max-width: 768px) {
-  .cid-qPcHydLrS1 .image-block {
     width: 100% !important;
   }
 }
@@ -2755,29 +2663,6 @@ body {
 }
 @media (max-width: 768px) {
   .cid-qPcWIe5ZCx .image-block {
-    width: 100% !important;
-  }
-}
-.cid-qPcWIX9oeE {
-  background: #1c041d;
-}
-.cid-qPcWIX9oeE .image-block {
-  margin: auto;
-  width: 100% !important;
-}
-.cid-qPcWIX9oeE .mbr-figure {
-  margin: 0 auto;
-}
-.cid-qPcWIX9oeE figcaption {
-  position: relative;
-}
-.cid-qPcWIX9oeE figcaption div {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-@media (max-width: 768px) {
-  .cid-qPcWIX9oeE .image-block {
     width: 100% !important;
   }
 }
@@ -3017,6 +2902,60 @@ body {
   .cid-qPcWO5pbSr .image-block {
     width: 100% !important;
   }
+}
+.cid-qPlIAu5d6a {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-image: url("../../../assets/images/116.gif");
+}
+.cid-qPlIAu5d6a .socicon-bg-facebook {
+  background: #3e5b98;
+  color: #ffffff;
+}
+.cid-qPlIAu5d6a .socicon-bg-twitter {
+  background: #4da7de;
+  color: #ffffff;
+}
+.cid-qPlIAu5d6a .socicon-bg-googleplus {
+  background: #dd4b39;
+  color: #ffffff;
+}
+.cid-qPlIAu5d6a .socicon-bg-vkontakte {
+  background: #5a7fa6;
+  color: #ffffff;
+}
+.cid-qPlIAu5d6a .socicon-bg-odnoklassniki {
+  background: #f48420;
+  color: #ffffff;
+}
+.cid-qPlIAu5d6a .socicon-bg-pinterest {
+  background: #c92619;
+  color: #ffffff;
+}
+.cid-qPlIAu5d6a .socicon-bg-mail {
+  background: #134785;
+  color: #ffffff;
+}
+.cid-qPlIAu5d6a .btn-social {
+  border: none !important;
+}
+.cid-qPlIAu5d6a .btn-social {
+  border-radius: 0 !important;
+}
+.cid-qPlIAu5d6a [class^="socicon-"]:before,
+.cid-qPlIAu5d6a [class*=" socicon-"]:before {
+  line-height: 44px;
+}
+@media (max-width: 767px) {
+  .cid-qPlIAu5d6a .btn {
+    font-size: 20px !important;
+  }
+}
+.cid-qPlIAu5d6a .mbr-section-title I {
+  color: #a833d0;
+}
+.cid-qPlIAu5d6a .mbr-section-title B {
+  color: #efefef;
 }
 .cid-qPg16oAoO9 {
   padding-top: 30px;
@@ -3464,6 +3403,60 @@ body {
 }
 .cid-qPjaKJmwHG B {
   color: #ffffff;
+}
+.cid-qPlIG1Oh9l {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-image: url("../../../assets/images/116.gif");
+}
+.cid-qPlIG1Oh9l .socicon-bg-facebook {
+  background: #3e5b98;
+  color: #ffffff;
+}
+.cid-qPlIG1Oh9l .socicon-bg-twitter {
+  background: #4da7de;
+  color: #ffffff;
+}
+.cid-qPlIG1Oh9l .socicon-bg-googleplus {
+  background: #dd4b39;
+  color: #ffffff;
+}
+.cid-qPlIG1Oh9l .socicon-bg-vkontakte {
+  background: #5a7fa6;
+  color: #ffffff;
+}
+.cid-qPlIG1Oh9l .socicon-bg-odnoklassniki {
+  background: #f48420;
+  color: #ffffff;
+}
+.cid-qPlIG1Oh9l .socicon-bg-pinterest {
+  background: #c92619;
+  color: #ffffff;
+}
+.cid-qPlIG1Oh9l .socicon-bg-mail {
+  background: #134785;
+  color: #ffffff;
+}
+.cid-qPlIG1Oh9l .btn-social {
+  border: none !important;
+}
+.cid-qPlIG1Oh9l .btn-social {
+  border-radius: 0 !important;
+}
+.cid-qPlIG1Oh9l [class^="socicon-"]:before,
+.cid-qPlIG1Oh9l [class*=" socicon-"]:before {
+  line-height: 44px;
+}
+@media (max-width: 767px) {
+  .cid-qPlIG1Oh9l .btn {
+    font-size: 20px !important;
+  }
+}
+.cid-qPlIG1Oh9l .mbr-section-title I {
+  color: #a833d0;
+}
+.cid-qPlIG1Oh9l .mbr-section-title B {
+  color: #efefef;
 }
 .cid-qPjaM4QYt6 {
   padding-top: 30px;
